--- a/src/app/reservation/create-reservation/floor-and-wing-step/floor-and-wing-step.component.html
+++ b/src/app/reservation/create-reservation/floor-and-wing-step/floor-and-wing-step.component.html
@@ -1,7 +1,8 @@
-<section class="pt-0 md:pt-24 w-full">
-    <h4 class="text-2xl font-extrabold">Verdieping:</h4>
+<section class="pt-0 md:pt-24 w-full space-y-10">
+  <div class="flex flex-col space-y-2">
+    <h4 class="text-xl font-semibold">Verdieping:</h4>
     <mat-form-field class="w-full">
-      <mat-label>Kies verdieping</mat-label>
+      <mat-label>Selecteer een verdieping</mat-label>
       <mat-select class="w-full">
         @for (floor of floors; track floor){
         <mat-option class="w-screen" value="{{floor.number}}"
@@ -11,9 +12,11 @@
         }
       </mat-select>
     </mat-form-field>
-    <h4 class="text-2xl font-extrabold">Vleugel:</h4>
+  </div>
+  <div class="flex flex-col space-y-2">
+    <h4 class="text-xl font-semibold">Vleugel:</h4>
     <mat-form-field class="w-full">
-      <mat-label>Kies vleugel</mat-label>
+      <mat-label>Selecteer een vleugel</mat-label>
       <mat-select [disabled]="!floorId">
         @for (wing of wings; track wing){
         <mat-option value="{{wing.name}}"
@@ -21,9 +24,10 @@
         }
       </mat-select>
     </mat-form-field>
+  </div>
     <div class="w-full flex justify-center items-center space-x-4">
-      <button class="border-2 border-primary-dark-purple rounded-2xl w-fit h-fit px-3 py-0.5 text-2xl text-primary-dark-purple" matStepperPrevious>Vorige</button>
-      <button class="bg-primary-dark-purple rounded-2xl w-fit h-fit px-3 py-1 text-2xl text-white"
+      <button class="border-2 border-primary-dark-purple rounded-lg w-fit h-fit p-2 text-xl hover:bg-secondary-purple-light duration-300" matStepperPrevious>Vorige</button>
+      <button class="bg-primary-dark-purple rounded-lg w-fit h-fit p-2 text-xl text-white hover:bg-purple-950 duration-300" 
               (click)="checkValidReservationType()"
               matStepperNext>Volgende</button>
     </div>
