--- a/src/app/reservation/create-reservation/verify-reservation-step/verify-reservation-step.component.html
+++ b/src/app/reservation/create-reservation/verify-reservation-step/verify-reservation-step.component.html
@@ -1,18 +1,20 @@
-<section>
-  <h1>Gebouw: <strong>{{building.name}}</strong></h1>
-  <h1>Verdieping: <strong>{{floor.number}}</strong></h1>
-  <h1>Vleugel: <strong>{{wing.name}}</strong></h1>
-  <h1>Start Datum en Tijd: <strong>{{formatDate(startDate)}}, {{formatTime(startDate)}}</strong></h1>
-  <h1>Eind Datum en Tijd: <strong>{{formatDate(endDate)}}, {{formatTime(endDate)}}</strong></h1>
-  <h1>Reservering Type: <strong>{{reservationType}}</strong></h1>
+<section class="flex flex-col space-y-10 pt-0 md:pt-24">
+  <div class="flex flex-col space-y-2 text-xl">
+    <h1>Gebouw: <strong>{{building.name}}</strong></h1>
+    <h1>Verdieping: <strong>{{floor.number}}</strong></h1>
+    <h1>Vleugel: <strong>{{wing.name}}</strong></h1>
+    <h1>Startdatum en -tijd: <strong>{{formatDate(startDate)}}, {{formatTime(startDate)}}</strong></h1>
+    <h1>Einddatum en -tijd: <strong>{{formatDate(endDate)}}, {{formatTime(endDate)}}</strong></h1>
+    <h1>Reserveringstype: <strong>{{reservationType.toLowerCase()}}</strong></h1>
+  </div>
+  
   <section class="w-full flex justify-center">
     <button
-      class="w-40 h-12 bg-white cursor-pointer rounded-2xl border-2 border-primary-dark-purple
-      shadow-custom-inset group hover:bg-primary-dark-purple transition duration-300 ease-in-out
-      flex items-center justify-center"
+      class="w-1/4 rounded-lg bg-primary-dark-purple hover:bg-purple-950 duration-300
+      flex items-center justify-center p-2 text-white"
       (click)="makeReservation()" [disabled]="isLoading">
       @if (!isLoading){
-        <span class="font-medium text-[#333] group-hover:text-white">Bevestig</span>
+        <span class="text-xl">Bevestig</span>
       }
       <svg *ngIf="isLoading" class="animate-spin h-5 w-5 text-primary-dark-purple group-hover:text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
         <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
