--- a/src/app/reservation-details/reservation-details.component.html
+++ b/src/app/reservation-details/reservation-details.component.html
@@ -1,7 +1,6 @@
-<div class="md:container md:mx-auto h-full p-4 md:p-0">
-  <article
-    class="rounded-lg p-4 border-2 border-slate-300 bg-secondary-purple-light space-y-4 mb-5 flex flex-col md:flex-row md:space-y-0 md:space-x-4 justify-center content-center gap-8"
-  >
+<div class="md:container md:mx-auto h-full p-4 md:p-0 space-y-6">
+  <h1 class="w-min whitespace-nowrap text-3xl font-bold">Reservering details</h1>
+  <article class="rounded-lg p-4 border-2 border-secondary-purple-light space-y-4 mb-5 flex flex-col md:flex-row md:space-y-0 md:space-x-4 justify-center content-center gap-8 w-full">
     <div class="flex-1">
       <img
         [src]="'./assets/locations/' + reservation.location.wing.floor.building.name.toLowerCase() + '.png'"
@@ -18,12 +17,7 @@
             | date : "d MMMM y" || "Onbekende startdatum"
         }}
       </h2>
-      <h5 class="text-xl font-light">Status: {{ reservation.status }}</h5>
       <div class="space-y-4">
-        <div>
-          <h3 class="font-bold">Type</h3>
-          <p>{{ reservation.location.type }}</p>
-        </div>
         <div>
           <h3 class="font-bold">Datum en Tijd</h3>
           <p>
@@ -37,7 +31,7 @@
           <h3 class="font-bold">Adres</h3>
           <p class="font-extralight">
             {{ reservation.location.wing.floor.building.address }}
-            <span class="font-medium">{{
+            <span class="font-extralight">{{
               reservation.location.wing.floor.building.name
             }}</span>
           </p>
@@ -58,18 +52,23 @@
           </p>
         </div>
         <div>
+          <h3 class="font-bold">Type</h3>
+          <p>{{ reservation.location.type }}</p>
+        </div>
+        <div>
           <h3 class="font-bold">Aantal personen</h3>
           <p>
             {{ reservation.numberOfPeople || "Onbekend aantal personen" }}
           </p>
         </div>
+        <div class="flex space-x-2">
+          <h3 class="font-bold">Status:</h3>
+          <p *ngIf="reservation.status.toLowerCase() === 'not_checked_in'">Niet ingecheckt</p>
+          <p *ngIf="reservation.status.toLowerCase() === 'checked_in'">Ingecheckt</p>
+          <p *ngIf="reservation.status.toLowerCase() === 'cancelled'">Geannuleerd</p>
+        </div>
       </div>
-      <div class="flex-1 space-x-4 self-end">
-        <button
-          class="bg-primary-dark-purple text-white p-2 rounded-lg hover:bg-secondary-purple duration-300 mr-2"
-        >
-          Wijzigen
-        </button>
+      <div class="flex-1 space-x-4 w-full md:w-auto md:self-end">
         <button
           class="bg-primary-red text-white p-2 rounded-lg hover:bg-secondary-dark-pink duration-300 mr-2 lg:mx-2"
         >
