--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -1,6 +1,6 @@
-<article class="flex flex-col h-full w-full space-y-6">
+<article class="flex flex-col p-4 md:p-0 h-full w-full space-y-6">
     <h1 class="w-min whitespace-nowrap text-3xl font-bold">Mijn favorieten</h1>
-    <section class="w-full flex flex-col md:flex-row md:space-x-4 p-4 md:p-0">
+    <section class="w-full flex flex-col md:flex-row md:space-x-4">
         <app-collegues [favoriteColleagues]="favoriteColleaguesList" class="w-full"></app-collegues>
         <app-building [favoriteLocation]="favoriteBuildingList" class="w-full"></app-building>
     </section>
