--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<article class="flex flex-col space-y-6 w-full h-full px-4">
+<article class="flex flex-col space-y-6 w-full h-full p-4 md:p-0">
   <h1 class="w-min whitespace-nowrap text-3xl font-bold">Welkom, {{ this.user?.firstName }}</h1>
   <div class="flex flex-col w-full space-y-5 md:space-y-0 md:space-x-20 md:flex-row md:p-0">
     <section class="w-full md:w-3/5 order-2 md:order-1">
