fix: made the create reservation page responsive again

--- a/src/app/reservation/create-reservation/building-step/building-step.component.html
+++ b/src/app/reservation/create-reservation/building-step/building-step.component.html
@@ -1,5 +1,5 @@
 <section class="pt-0 md:pt-24">
-  <h1 class="text-2xl font-semibold pl-5">Selecteer een Gebouw:</h1>
+  <h1 class="text-xl md:text-2xl font-semibold pl-5">Selecteer een Gebouw:</h1>
   <swiper-container #swiperContainer loop="true" navigation="true" speed="500" class="min-h-fit space-x-1"
                     [attr.slides-per-view]="slidesPerView">
     @for (building of buildings; track building){
