--- a/src/app/reservation/create-reservation/floor-and-wing-step/floor-and-wing-step.component.html
+++ b/src/app/reservation/create-reservation/floor-and-wing-step/floor-and-wing-step.component.html
@@ -1,6 +1,6 @@
-<section class="pt-0 md:pt-24 w-full space-y-10">
+<section class="pt-0 md:pt-24 w-full space-y-5 md:space-y-10">
   <div class="flex flex-col space-y-2">
-    <h4 class="text-xl font-semibold">Verdieping:</h4>
+    <h4 class="text-lg md:text-xl font-semibold">Verdieping:</h4>
     <mat-form-field class="w-full">
       <mat-label>Selecteer een verdieping</mat-label>
       <mat-select class="w-full">
@@ -14,7 +14,7 @@
     </mat-form-field>
   </div>
   <div class="flex flex-col space-y-2">
-    <h4 class="text-xl font-semibold">Vleugel:</h4>
+    <h4 class="text-lg md:text-xl font-semibold">Vleugel:</h4>
     <mat-form-field class="w-full">
       <mat-label>Selecteer een vleugel</mat-label>
       <mat-select [disabled]="!floorId">
@@ -26,8 +26,8 @@
     </mat-form-field>
   </div>
     <div class="w-full flex justify-center items-center space-x-4">
-      <button class="border-2 border-primary-dark-purple rounded-lg w-fit h-fit p-2 text-xl hover:bg-secondary-purple-light duration-300" matStepperPrevious>Vorige</button>
-      <button class="bg-primary-dark-purple rounded-lg w-fit h-fit p-2 text-xl text-white hover:bg-purple-950 duration-300" 
+      <button class="border-2 border-primary-dark-purple rounded-lg w-fit h-fit p-2 text-lg md:text-xl hover:bg-secondary-purple-light duration-300" matStepperPrevious>Vorige</button>
+      <button class="bg-primary-dark-purple rounded-lg w-fit h-fit p-2 text-lg md:text-xl text-white hover:bg-purple-950 duration-300" 
               (click)="checkValidReservationType()"
               matStepperNext>Volgende</button>
     </div>
