--- a/src/app/reservations/reservations.component.html
+++ b/src/app/reservations/reservations.component.html
@@ -14,7 +14,7 @@
       <p class="w-1/5">Type</p>
       <p class="w-1/5">Acties</p>
     </section>
-    <ul *ngIf="reservations.length > 0; else noReservations" class="h-[500px] overflow-auto">
+    <ul *ngIf="reservations.length > 0; else noReservations" class="h-[700px] md:h-[500px] overflow-auto">
       <li *ngFor="let reservation of reservations" class="pl-1 bg-gradient-to-b from-primary-red to-primary-dark-purple rounded-lg border-2 border-secondary-purple-light w-full mb-2">
         <div class="md:hidden flex justify-between bg-white rounded-md">
           <div class="flex flex-col p-4">
