--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
     </section>
 
     <section class="w-full md:w-2/5 h-full pb-5 space-y-5 flex flex-col items-end order-1 md:order-2">
-      <button routerLink="/create-reservation" class="flex space-x-2 p-2 bg-primary-dark-purple rounded-lg text-white hover:bg-purple-950">
+      <button routerLink="/create-reservation" class="flex w-full md:w-auto justify-center space-x-2 p-2 bg-primary-dark-purple rounded-lg text-white hover:bg-purple-950">
         <lucide-icon name="plus"></lucide-icon>
         <p>Maak een nieuwe reservering</p>
       </button>
