--- a/src/app/home/upcoming-reservations/upcoming-reservations.component.html
+++ b/src/app/home/upcoming-reservations/upcoming-reservations.component.html
@@ -1,7 +1,7 @@
 <article class="rounded-lg p-4 border-2 border-secondary-purple-light space-y-4 mb-5">
-  <div class="flex justify-between items-center">
+  <div class="flex flex-col md:flex-row space-y-2 md:space-y-0 md:justify-between items-center">
     <h2 class="text-xl font-semibold">Aankomende reserveringen</h2>
-    <button routerLink="/reservations" class="border-2 border-primary-dark-purple  p-2 rounded-lg hover:bg-secondary-purple-light duration-300" *ngIf="this.reservations.length > 0">Bekijk alles</button>
+    <button routerLink="/reservations" class="border-2 border-primary-dark-purple w-full md:w-auto p-2 rounded-lg hover:bg-secondary-purple-light duration-300" *ngIf="this.reservations.length > 0">Bekijk alles</button>
   </div>
   <div *ngIf="this.reservations.length == 0">
     <p>U heeft geen aankomende reserveringen.</p>
@@ -13,7 +13,7 @@
         <p>Tijd: {{ reservation.startDateTime | date:'shortTime' || "Onbekende startdatum" }}</p>
         <p>Locatie: {{ reservation.location.wing.floor.building.name || "Onbekende locatie" }}</p>
       </div>
-      <button [routerLink]="'/reservation/details/' + reservation.id" class="flex bg-secondary-purple-light p-2 rounded-lg space-x-2 hover:bg-gray-300 duration-300">
+      <button [routerLink]="'/reservation/details/' + reservation.id" class="flex bg-secondary-purple-light p-2 rounded-lg space-x-2 hover:bg-gray-300 duration-300 items-center">
         <p>Meer info</p>
         <lucide-icon name="move-right"></lucide-icon>
       </button>
