--- a/src/app/reservation-details/reservation-details.component.html
+++ b/src/app/reservation-details/reservation-details.component.html
@@ -53,8 +53,7 @@
         </div>
         <div>
           <h3 class="font-bold">Type</h3>
-          <p *ngIf="reservation.location.type === 'WORKPLACE'">Flexplek</p>
-          <p *ngIf="reservation.location.type === 'ROOM'">Vergaderruimte</p>
+          <p>{{locationTypeTranslation[reservation.location.type]}}</p>
         </div>
         <div>
           <h3 class="font-bold">Aantal personen</h3>
@@ -71,7 +70,7 @@
       </div>
       <div class="flex-1 space-x-4 w-full md:w-auto md:self-end">
         <button
-          class="bg-primary-red w-full md:w-auto text-white p-2 rounded-lg hover:bg-secondary-dark-pink duration-300 mr-2 lg:mx-2"
+          class="bg-primary-red bg-opacity-80 w-full md:w-auto text-white p-2 rounded-lg hover:bg-red-700  duration-300 mr-2 lg:mx-2"
         >
           Annuleren
         </button>
