feat: added validation for login and password reset

--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -13,6 +13,7 @@
                  formControlName="username"
                  class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-600"
                  [class.invalid]="isControlInvalid('username') && resetForm.get('username')?.touched">
+          <span class="text-primary-red text-sm" *ngIf="isControlInvalid('username')">Gebruikersnaam moet een emailadres zijn</span>
         </div>
         <div class="mb-4">
           <label for="password" class="block">Nieuw wachtwoord</label>
@@ -21,6 +22,14 @@
                  formControlName="password"
                  class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-600"
                  [class.invalid]="isControlInvalid('password')">
+          <div *ngIf="isControlInvalid('password')">
+            <p class="text-sm text-primary-red">Wachtwoord moet:</p>
+            <ul class="text-sm list-disc text-primary-red pl-8">
+              <li>8 karakters lang zijn</li>
+              <li>een hoofdletter bevatten</li>
+              <li>een nummer bevatten</li>
+            </ul>
+          </div>
         </div>
         <div class="mb-4">
           <label for="passwordCheck" class="block">Herhaal het nieuwe wachtwoord</label>
@@ -29,7 +38,10 @@
                  formControlName="passwordRepeat"
                  class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-600"
                  [class.invalid]="isControlInvalid('passwordRepeat')">
-          <p class="text-sm text-gray-600 mt-2 cursor-pointer" routerLink="/login">Terug naar login</p>
+          <div class="flex flex-col space-y-2">
+            <span *ngIf="isControlInvalid('passwordRepeat')" class="text-sm text-primary-red">Wachtwoorden komen niet overeen</span>
+            <p class="text-sm text-gray-600 mt-2 cursor-pointer" routerLink="/login">Terug naar login</p>
+          </div>
         </div>
         <button type="submit"
                 class="w-full text-white p-2 rounded cursor-pointer bg-primary-dark-purple hover:bg-purple-950">
