Test:added test for reserving a room.

--- a/src/app/reservation/create-reservation/meeting-room-step/meeting-room-step.component.html
+++ b/src/app/reservation/create-reservation/meeting-room-step/meeting-room-step.component.html
@@ -21,6 +21,6 @@
 </mat-paginator>
 <div class="w-full flex justify-center items-center space-x-4">
   <button class="border-2 border-primary-dark-purple rounded-2xl w-fit h-fit px-3 py-0.5 text-2xl text-primary-dark-purple" matStepperPrevious>Vorige</button>
-  <button class="bg-primary-dark-purple rounded-2xl w-fit h-fit px-3 py-1 text-2xl text-white"
+  <button data-cy=volgende-button class="bg-primary-dark-purple rounded-2xl w-fit h-fit px-3 py-1 text-2xl text-white"
           (click)="checkMeetingRoom();" >Volgende</button>
 </div>
