--- a/src/app/reservation/create-reservation/meeting-room-step/meeting-room-step.component.html
+++ b/src/app/reservation/create-reservation/meeting-room-step/meeting-room-step.component.html
@@ -20,8 +20,7 @@
   </mat-paginator>
   <div class="w-full flex justify-center items-center space-x-4">
     <button class="border-2 border-primary-dark-purple rounded-lg w-fit h-fit p-2 text-lg md:text-xl hover:bg-secondary-purple-light duration-300" matStepperPrevious>Vorige</button>
-    <button class="bg-primary-dark-purple rounded-lg w-fit h-fit p-2 text-lg md:text-xl text-white hover:bg-purple-950 duration-300"
+    <button data-cy=volgende-button class="bg-primary-dark-purple rounded-lg w-fit h-fit p-2 text-lg md:text-xl text-white hover:bg-purple-950 duration-300"
             (click)="checkMeetingRoom();">Volgende</button>
   </div>
 </div>
-
