feat: added a show password button

--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -13,31 +13,45 @@
                  formControlName="username"
                  class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-600"
                  [class.invalid]="isControlInvalid('username') && resetForm.get('username')?.touched">
-          <span class="text-primary-red text-sm" *ngIf="isControlInvalid('username')">Gebruikersnaam moet een emailadres zijn</span>
         </div>
         <div class="mb-4">
           <label for="password" class="block">Nieuw wachtwoord</label>
-          <input type="password"
+          <div class="flex relative items-center">
+            <input [type]="passwordVisible ? 'text' : 'password'"
                  id="password"
                  formControlName="password"
                  class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-600"
-                 [class.invalid]="isControlInvalid('password')">
+                 [class.invalid]="isControlInvalid('password')"
+                 >
+            <button type="button" class="absolute right-2 top-1/2 transform -translate-y-1/2 p-2 h-8 flex items-center" 
+            (click)="togglePassword()">
+              <lucide-icon [name]="passwordVisible ? 'eye-off' : 'eye'"></lucide-icon>
+            </button>
+          </div>
           <div *ngIf="isControlInvalid('password')">
             <p class="text-sm text-primary-red">Wachtwoord moet:</p>
             <ul class="text-sm list-disc text-primary-red pl-8">
               <li>8 karakters lang zijn</li>
               <li>een hoofdletter bevatten</li>
               <li>een nummer bevatten</li>
+              <li>een speciaal teken bevatten</li>
             </ul>
           </div>
         </div>
         <div class="mb-4">
           <label for="passwordCheck" class="block">Herhaal het nieuwe wachtwoord</label>
-          <input type="password"
+          <div class="flex relative items-center">
+            <input [type]="passwordVisible ? 'text' : 'password'"
                  id="passwordCheck"
                  formControlName="passwordRepeat"
                  class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-600"
                  [class.invalid]="isControlInvalid('passwordRepeat')">
+            <button type="button" class="absolute right-2 top-1/2 transform -translate-y-1/2 p-2 h-8 flex items-center" 
+            (click)="togglePassword()">
+              <lucide-icon [name]="passwordVisible ? 'eye-off' : 'eye'"></lucide-icon>
+            </button>
+          </div>
+          
           <div class="flex flex-col space-y-2">
             <span *ngIf="isControlInvalid('passwordRepeat')" class="text-sm text-primary-red">Wachtwoorden komen niet overeen</span>
             <p class="text-sm text-gray-600 mt-2 cursor-pointer" routerLink="/login">Terug naar login</p>
