--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,14 +9,18 @@
           <label for="username" class="block">Gebruikersnaam</label>
           <input type="text" id="username" formControlName="username" [(ngModel)]="username" name="username" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-600" required
           [ngClass]="loginForm.get('username')?.invalid && loginForm.get('username')?.touched ? 'border-primary-red' : 'border-gray-300'">
-          <div *ngIf="loginForm.get('username')?.invalid && loginForm.get('username')?.touched">
-            <p class="text-sm text-primary-red">Gebruikersnaam moet een emailadres zijn</p>
-          </div>
         </div>
         <div class="mb-4">
           <label for="password" class="block">Wachtwoord</label>
-          <input type="password" id="password" formControlName="password" [(ngModel)]="password" name="password" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-600" required
+          <div class="flex relative items-center">
+            <input [type]="passwordVisible ? 'text' : 'password'" id="password" formControlName="password" [(ngModel)]="password" name="password" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-600 appearance-none" required
           [ngClass]="loginForm.get('password')?.invalid && loginForm.get('password')?.touched ? 'border-primary-red' : 'border-gray-300'">
+            <button type="button" class="absolute right-2 top-1/2 transform -translate-y-1/2 p-2 h-8 flex items-center" 
+            (click)="togglePassword()">
+              <lucide-icon [name]="passwordVisible ? 'eye-off' : 'eye'"></lucide-icon>
+            </button>
+          </div>
+          
           <div class="flex flex-col space-y-4">
             <div *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched">
               <p class="text-sm text-primary-red">Wachtwoord moet:</p>
@@ -24,11 +28,11 @@
                 <li>8 karakters lang zijn</li>
                 <li>een hoofdletter bevatten</li>
                 <li>een nummer bevatten</li>
+                <li>een speciaal teken bevatten</li>
               </ul>
             </div>
             <a class="text-sm text-gray-600 mt-2 cursor-pointer" routerLink="/reset-password">Wachtwoord vergeten?</a>
           </div>
-          
         </div>
         <button type="submit" class="w-full text-white p-2 rounded cursor-pointer bg-purple-800 hover:bg-purple-900 align-bottom">Login</button>
       </form>
