fix: fetch users

--- a/src/app/users/user-item/user-item.component.html
+++ b/src/app/users/user-item/user-item.component.html
@@ -3,11 +3,6 @@
     <p class="w-1/4">{{ user!.firstName + " " + user!.lastName }}</p>
     <p class="w-1/4">{{ user!.email }}</p>
     <p class="w-1/4">{{ user!.phoneNumber }}</p>
-    @if (user!.role === 1) {
-      <p class="w-1/4">Admin</p>
-    }
-    @if (user!.role === 0) {
-      <p class="w-1/4">User</p>
-    }
+    <p class="w-1/4">{{ user!.role.toString().toLowerCase()}}</p>
   </div>
 </li>
