--- a/src/app/login/reset-password/request-reset/request-reset-password.component.html
+++ b/src/app/login/reset-password/request-reset/request-reset-password.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-center items-center h-screen bg-gray-100 login-container">
-  <div class="max-sm:flex-row border border-black flex w-[700px] h-[500px] shadow-lg rounded-lg overflow-hidden login-box">
+  <div class="md:flex-row md:border border-black flex w-[700px] h-[500px] md:shadow-lg md:rounded-lg overflow-hidden login-box">
     <div class="bg-gradient-to-b from-pink-500 to-blue-600 text-white flex justify-center items-center w-1/3 text-7xl p-8 font-semibold logo-section">
       CGI
     </div>
