--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -1,9 +1,9 @@
 <div class="flex justify-center items-center h-screen bg-gray-100 login-container">
-  <div class="max-sm:flex-row border border-black flex w-[700px] h-[500px] shadow-lg rounded-lg overflow-hidden login-box">
+  <div class="md:flex-row md:border border-black flex w-[700px] h-[500px] md:shadow-lg md:rounded-lg overflow-hidden login-box">
     <div class="bg-gradient-to-b from-pink-500 to-blue-600 text-white flex justify-center items-center w-1/3 text-7xl p-8 font-semibold logo-section">
       CGI
     </div>
-    <div class="flex flex-col justify-center bg-white w-2/3 p-8 form-section">
+    <div class="flex flex-col justify-center bg-white w-full p-8 form-section">
       <h2 class="w-min whitespace-nowrap text-2xl font-bold pb-2">Wachtwoord wijzigen</h2>
       <form [formGroup]="resetForm" (ngSubmit)="onSubmit()">
         <div class="mb-4">
