--- a/src/app/reservation-details/reservation-details.component.html
+++ b/src/app/reservation-details/reservation-details.component.html
@@ -70,6 +70,7 @@
       </div>
       <div class="flex-1 space-x-4 w-full md:w-auto md:self-end">
         <button
+          (click)="openDeleteModal()"
           class="bg-primary-red bg-opacity-80 w-full md:w-auto text-white p-2 rounded-lg hover:bg-red-700  duration-300 mr-2 lg:mx-2"
         >
           Annuleren
@@ -77,4 +78,7 @@
       </div>
     </div>
   </article>
+  @if (isDeleteModalVisible) {
+    <app-delete-modal (closeModalEvent)="openDeleteModal()" [reservationId]="id"></app-delete-modal>
+  }
 </div>
